@@ -17,6 +17,7 @@ The following list contains all changes to pgAdmin3, as present in cvs.
 </ul>
 <br>
 <ul>
+    <li>2005-03-04 DP  1.2.1 Fix aggregate SQL generation per James Prichard
     <li>2005-02-07 AHP 1.2.1 fix libpq/ssl library detection
     <li>2005-01-13 DP  1.2.1 fix EXPLICIT CAST sql generation (r: Merlin Moncure)
     <li>2004-12-06 AP  1.2.1 Fix tablespace reference in namespace
